fixed z-index. was behind menu element on forum page

--- a/PWE_Game_Panel.css
+++ b/PWE_Game_Panel.css
@@ -13,10 +13,9 @@
 
 #gppop { 
    position: absolute;
-	 z-index: 1;
    margin: 10px 0px 0px -18px;
    padding: 10px;
-   z-index:1;
+   z-index:1000;
    width: 640px; 
    background:rgba(0,0,0,0.85);
    border-radius:15px;
